--- a/app/views/group/show.html.erb
+++ b/app/views/group/show.html.erb
@@ -10,7 +10,7 @@
   <tr>
     <th scope="col">#</th>
     <th scope="col"><%= t('students.surname') %></th>
-    <th scope="col"><%= t('students.flat') %></th>
+    <th scope="col"><%= t('students.street') %></th>
     <th scope="col"><%= t('students.house') %></th>
     <th scope="col"><%= t('students.flat') %></th>
     <th scope="col"></th>
